--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
     "@prisma/client": "^5.21.1",
+    "axios": "^1.7.7",
     "lucide-react": "^0.456.0",
     "next": "14.2.14",
     "react": "^18",
