--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^5.7.1",
     "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
+    "cloudinary": "^2.5.1",
     "lucide-react": "^0.456.0",
     "next": "14.2.14",
     "react": "^18",
