--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.1",
+    "@clerk/themes": "^2.1.43",
     "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
