--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^2.5.1",
     "lucide-react": "^0.456.0",
     "next": "14.2.14",
+    "next-cloudinary": "^6.16.0",
     "react": "^18",
     "react-dom": "^18"
   },
