--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@prisma/client": "^5.21.1",
     "axios": "^1.7.7",
     "cloudinary": "^2.5.1",
+    "dayjs": "^1.11.13",
+    "filesize": "^10.1.6",
     "lucide-react": "^0.456.0",
     "next": "14.2.14",
     "next-cloudinary": "^6.16.0",
